--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
         <title>Minimal PWA</title>
         <meta name="viewport" content="width=device-width, user-scalable=no"/>
         <link rel="manifest" href="manifest.json" />
+        <script type="text/javascript" src="./index.js"></script>
     </head>
     <body>
-        <div class="revision">Revision 8</div>
         <img src="test-image.png" alt="">
         <div class="main-text">
-            Minimal PWA, open Console for more!
+            Minimal PWA Demo - open your Console!
         </div>
         <div class="network-message">
             Network:
             <span id="network-status" class="">Good</span>
         </div>
-        <script type="text/javascript" src="./index.js">
-        </script>
     </body>
 </html>
