--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="./index.js"></script>
     </head>
     <body>
-        <img src="test-image.png" alt="">
+        <img src="test-image.jpg" width="200px" height="200px" alt="">
         <div class="main-text">
             Minimal PWA Demo - open your Console!
         </div>
